# apiary

./: .dockerignore  .gitignore  BENCHMARKS.md  BUILD_STATUS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  RASPBERRY_PI_CONFIG_IMPLEMENTATION.md  README.md  STEP10_COMPLETION.md  STEP1_COMPLETION.md  STEP2_COMPLETION.md  STEP4_COMPLETION.md  STEP5_COMPLETION.md  STEP6_COMPLETION.md  STEP7_COMPLETION.md  STEP8_COMPLETION.md  STEP9_COMPLETION.md  benchmark_history.json  benchmark_results.json  docker-compose.pi3.yml  docker-compose.pi4-1gb.yml  docker-compose.pi4-2gb.yml  docker-compose.pi4-4gb.yml  docker-compose.pi4-8gb.yml  docker-compose.pi5-16gb.yml  docker-compose.pi5-1gb.yml  docker-compose.pi5-2gb.yml  docker-compose.pi5-4gb.yml  docker-compose.pi5-8gb.yml  docker-compose.yml  index.html  multinode_benchmark_results.json  pyproject.toml  test_step10_acceptance.py  test_step1_acceptance.py  test_step3_acceptance.py  test_step4_acceptance.py  test_step7_acceptance.py  test_step9_acceptance.py
.github/copilot/: instructions.md
.github/copilot/prompts/: implement-step.prompt.md  review-step.prompt.md  test-step.prompt.md
.github/workflows/: benchmark.yml  ci.yml  release.yml  tier1-benchmarks.yml
benchmarks/: README.md  bench_runner.py  config.yaml  generate_datasets.py  load_data.py  requirements.txt  test_bench_runner.py
benchmarks/baselines/: duckdb_ssb.py  test_duckdb_ssb.py
benchmarks/generators/: __init__.py  apiary_generator.py  ssb_generator.py  tpch_generator.py  utils.py
benchmarks/queries/apiary/: apiary_queries.sql
benchmarks/queries/ssb/: ssb_queries.sql
benchmarks/queries/tpch/: tpch_queries.sql
benchmarks/results/: ssb_DryRun_mixed_sf1.json  tpch_DryRun_mixed_sf1.json
crates/apiary-cli/: Cargo.toml  README.md
crates/apiary-cli/src/: main.rs
crates/apiary-core/: Cargo.toml  README.md
crates/apiary-core/src/: config.rs  error.rs  ledger_types.rs  lib.rs  registry.rs  registry_manager.rs  storage.rs  types.rs
crates/apiary-python/: Cargo.toml  README.md
crates/apiary-python/src/: lib.rs
crates/apiary-query/: Cargo.toml  README.md
crates/apiary-query/src/: distributed.rs  lib.rs  timing.rs
crates/apiary-runtime/: Cargo.toml  README.md
crates/apiary-runtime/src/: bee.rs  behavioral.rs  cache.rs  heartbeat.rs  lib.rs  node.rs
crates/apiary-runtime/tests/: backpressure.rs  chaos.rs  concurrent_writes.rs  mason_isolation.rs  multi_node.rs  node_failure.rs  solo_mode.rs
crates/apiary-storage/: Cargo.toml  README.md
crates/apiary-storage/src/: cell_reader.rs  cell_writer.rs  ledger.rs  lib.rs  local.rs  s3.rs
deploy/: docker-compose.pi3.yml  docker-compose.pi4-1gb.yml  docker-compose.pi4-2gb.yml  docker-compose.pi4-4gb.yml  docker-compose.pi4-8gb.yml  docker-compose.pi5-16gb.yml  docker-compose.pi5-1gb.yml  docker-compose.pi5-2gb.yml  docker-compose.pi5-4gb.yml  docker-compose.pi5-8gb.yml
docs/: BENCHMARKS.md  BENCHMARK_IMPLEMENTATION.md  MULTINODE_BENCHMARK_IMPLEMENTATION.md  RASPBERRY_PI_CONFIG_IMPLEMENTATION.md  architecture-summary.md  benchmarking.md  concepts.md  deployment-containers.md  deployment-quickstart.md  deployment-raspberry-pi.md  getting-started.md  python-sdk.md  raspberry-pi-benchmarking.md  sql-reference.md
docs/architecture/: 01-architecture-overview.md  02-storage-engine.md  03-swarm-coordination.md  04-query-execution.md  05-behavioral-model.md  06-roadmap.md
docs/development/: STEP3_COMPLETION.md
docs/prompts/: 07-v1-development-prompts.md
python/apiary/: __init__.py  py.typed
scripts/: apiary-node.py  generate_benchmark_report.py  generate_synthetic_data.py  install.ps1  install.sh  run_benchmark.py  run_multinode_benchmark.py  test_generate_benchmark_report.py
tests/: test_step2_acceptance.py  test_step5_acceptance.py  test_step6_acceptance.py  test_step8_acceptance.py
