[package]
name = "apiary-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for the Apiary distributed data processing framework"
readme = "README.md"
license.workspace = true

[[bin]]
name = "apiary"
path = "src/main.rs"

[dependencies]
apiary-core.workspace = true
apiary-storage.workspace = true
apiary-runtime.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
