[package]
name = "apiary-core"
version.workspace = true
edition.workspace = true
description = "Core types, traits, and configuration for the Apiary distributed data processing framework"
readme = "README.md"
license.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
