[package]
name = "apiary-query"
version.workspace = true
edition.workspace = true
description = "DataFusion-based SQL query engine for the Apiary distributed data processing framework"
readme = "README.md"
license.workspace = true

[dependencies]
apiary-core.workspace = true
apiary-storage.workspace = true
arrow.workspace = true
async-trait.workspace = true
datafusion.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile = "3"
