[package]
name = "apiary-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
apiary-core.workspace = true
apiary-storage.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
