[package]
name = "apiary-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
apiary-core.workspace = true
apiary-storage.workspace = true
arrow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
