[package]
name = "apiary-storage"
version.workspace = true
edition.workspace = true

[dependencies]
apiary-core.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
object_store.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
