[package]
name = "apiary-storage"
version.workspace = true
edition.workspace = true
description = "Storage backends and transaction ledger for the Apiary distributed data processing framework"
readme = "README.md"
license.workspace = true

[dependencies]
apiary-core.workspace = true
arrow.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
object_store.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
